--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,103 +8,109 @@
 
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
+        android:gravity="center_horizontal"
         >
 
         <EditText
             android:id="@+id/firstName"
             android:text="@string/firstName"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="125dp"
+        android:layout_marginTop="115dp"
+        android:gravity="center_horizontal"
         >
 
         <EditText
             android:id="@+id/lastName"
             android:text="@string/lastName"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="190dp"
+        android:gravity="center_horizontal"
         >
 
         <EditText
             android:id="@+id/email"
             android:text="@string/email"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="275dp"
+        android:layout_marginTop="265dp"
+        android:gravity="center_horizontal"
         >
 
         <EditText
             android:id="@+id/password1"
             android:inputType="textPassword"
             android:hint="@string/password1"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="340dp"
+        android:gravity="center_horizontal"
         >
 
         <EditText
             android:id="@+id/password2"
             android:inputType="textPassword"
             android:hint="@string/password1"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="400dp"
+        android:gravity="center_horizontal"
         >
 
         <Button
             android:id="@+id/inscriptionButton"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/inscriptionButton"/>
 
