--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,67 +6,92 @@
     android:layout_height="match_parent"
     tools:context="com.example.emili.firstapp.ui.chatActivity.ChatActivity">
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/chatRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="430dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
-
-    <ImageView
-        android:id="@+id/messagePicture"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="22dp"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/anonyme"
-        />
-
-    <ProgressBar
-        android:id="@+id/loadingBar"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="150dp"/>
-
-    <EditText
-        android:id="@+id/editMessage"
-        android:textColorHint="#000"
-        android:hint="@string/chatMessage"
-        android:layout_width="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="85dp"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/btnSendMessage"
-        android:hint="@string/envoyerMessage"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="#E1E8E2"
+        >
 
-    <TextView
-        android:textColor="#000"
-        android:fontFamily="sans-serif"
-        android:id="@+id/messagePictureIndicator"
-        android:layout_width="wrap_content"
-        android:text="@string/fileIndicator"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            app:layout_constraintBottom_toBottomOf="@id/linear2"
+            android:id="@+id/linear1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/chatRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="430dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
+        </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/loadingBar"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="150dp"/>
 
+        <LinearLayout
+            app:layout_constraintBottom_toBottomOf="@id/linear3"
+            android:id="@+id/linear2"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linear1">
+
+        <ImageView
+            android:id="@+id/messagePicture"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:src="@drawable/anonyme"
+            />
+
+        <EditText
+            android:id="@+id/editMessage"
+            android:textColorHint="#000"
+            android:hint="@string/chatMessage"
+            android:layout_width="200dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/btnSendMessage"
+            android:text="@string/envoyerMessage"
+            android:layout_width="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="10dp"
+            android:background="#E89F0C"
+            android:fontFamily="sans-serif"
+            android:textColor="#ffffff"
+            android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linear3"
+            android:layout_width="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="20dp"
+            android:layout_below="@+id/linear2">
+
+            <TextView
+                android:layout_marginLeft="12dp"
+                android:id="@+id/messagePictureIndicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:text="@string/fileIndicator"
+                android:textColor="#000"
+                />
+        </LinearLayout>
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
