--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#A2C781"
     tools:context=".ui.mainActivity.MainActivity">
 
     <LinearLayout
@@ -21,6 +22,7 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:background="@drawable/shap_edit_text"
             />
     </LinearLayout>
 
@@ -39,6 +41,8 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:background="@drawable/shap_edit_text"
+
             />
     </LinearLayout>
 
@@ -57,6 +61,9 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:inputType="textEmailAddress"
+            android:background="@drawable/shap_edit_text"
+
             />
     </LinearLayout>
 
@@ -76,6 +83,8 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:background="@drawable/shap_edit_text"
+
             />
     </LinearLayout>
 
@@ -95,6 +104,8 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:background="@drawable/shap_edit_text"
+
             />
     </LinearLayout>
 
@@ -102,15 +113,17 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center_horizontal"
         >
 
         <Button
             android:id="@+id/signUpButton"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#3E0CE8"
+            android:textColor="#ffffff"
+            android:fontFamily="sans-serif"
             android:text="@string/signUpButton"/>
 
     </LinearLayout>
