--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#A2C781"
     tools:context="ui.signInActivity.SignInActivity">
 
     <LinearLayout
@@ -20,7 +21,9 @@
             android:text="@string/email"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
             android:gravity="center"
+            android:background="@drawable/shap_edit_text"
             />
     </LinearLayout>
 
@@ -40,6 +43,7 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:background="@drawable/shap_edit_text"
             />
     </LinearLayout>
 
@@ -47,15 +51,17 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="300dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center_horizontal"
         >
 
         <Button
             android:id="@+id/signInButton"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#E89F0C"
+            android:fontFamily="sans-serif"
+            android:textColor="#ffffff"
             android:text="@string/signInButton"/>
 
     </LinearLayout>
