--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -1,48 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#E2E8F5"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/auteur"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearance"
-        android:text="auteur"
-        android:textSize="25dp"
-        android:textStyle="bold|italic"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"/>
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="#E1E8E2"
+        >
 
-    <TextView
-        android:id="@+id/message_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearance"
-        android:text="message"
-        android:textSize="18dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="45dp"/>
+        <LinearLayout
+            android:id="@+id/layout1"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            >
+            <LinearLayout
+                android:id="@+id/layout1_1"
+                android:orientation="horizontal"
+                android:layout_width="260dp"
+                android:layout_height="wrap_content"
+                >
+            <TextView
+                android:id="@+id/auteur"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearance"
+                android:text="auteur"
+                android:textSize="25dp"
+                android:textStyle="bold|italic"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"/>
+            </LinearLayout>
 
-    <ImageView
-        android:id="@+id/messagePicture"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="45dp"
-        android:src="@mipmap/ic_launcher"/>
+                <LinearLayout
+                    android:id="@+id/layout1_2"
+                    android:orientation="horizontal"
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    >
+                    <TextView
+                        android:id="@+id/distances"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearance"
+                        android:text="@string/distance"
+                        android:textSize="18dp"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:layout_marginRight="30dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:id="@+id/distances"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearance"
-        android:text="@string/distance"
-        android:textSize="18dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="30dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"/>
+                </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout1"
+            android:layout_marginBottom="0dp"
+            >
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/messagePicture"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:src="@mipmap/ic_launcher"/>
+
+                <TextView
+                    android:id="@+id/message_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearance"
+                    android:text="message"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="50dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+            </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
